[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydb"
version = "0.1.0"
description = "A tiny embedded relational database in Python — teaching artifact for database internals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tinydb contributors" }]
keywords = ["database", "embedded", "sql", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Education",
]
# Runtime: zero third-party dependencies. Dev tools are isolated below.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
tinydb = "tinydb.cli:main"

[tool.setuptools.packages.find]
include = ["tinydb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "e2e: end-to-end tests driving the CLI subprocess",
]

[tool.coverage.run]
branch = true
source = ["tinydb"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
files = ["tinydb"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
